<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="55dp"
        app:layout_anchor="@+id/include"
        app:layout_anchorGravity="top|center">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:paddingRight="8dp"
            android:text="@string/CampoFicha"
            android:textSize="12sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:text="@string/CampoApellido"
            android:textSize="12sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="1dp"
            android:text="@string/CampoNombre"
            android:textSize="12sp" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="1dp"
            android:text="@string/CampoNacimiento"
            android:textSize="12sp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:text="@string/CampoTelefono"
            android:textSize="12sp"
            android:visibility="invisible" />

    </LinearLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main" />
</android.support.design.widget.CoordinatorLayout>